Fix typos, reword some sections and fix padding top in titles

--- a/en/portfolio/index.html
+++ b/en/portfolio/index.html
@@ -90,7 +90,7 @@
                     Spring boot example
                 </div>
                 <div class="panel-body">
-                    This is a small blog that demonstrates the use of Spring boot.
+                    Blog that demonstrates the use of Spring boot with MySQL
                 </div>
                 <div class="panel-footer">
                     <a
@@ -138,7 +138,7 @@
                 <div class="panel-body">
                     This is a command line application, showing how to map a
                     many to many relationship using XML, and how to write some HQL
-                    queries.
+                    queries. Tests demonstrate the use of JUnit + Hamcrest and Mockito.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -186,7 +186,8 @@
                     Web application with Servlets example
                 </div>
                 <div class="panel-body">
-                    This is a small web application with a catalog of movies.
+                    This web application to manage a catalog of movies. Tests demonstrate how to use
+                    JUnit, DBUnit and Mockito.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -232,8 +233,10 @@
                     Simple Simon game
                 </div>
                 <div class="panel-body">
-                    This is a Simple Simon Game written with vanilla JS using
-                    TDD.
+                    This is a Simple Simon Game written with vanilla JS using TDD. This application
+                    has 2 versions one with ES5 features and the most recent one uses ES6 classes and
+                    modules. Tests in both versions use Jasmine + Testem. The ES6 version bundles
+                    the production code using Rollup and the tests using Webpack.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -328,8 +331,7 @@
                     Lightweight clone of Reddit using Laravel
                 </div>
                 <div class="panel-body">
-                    Small Laravel application implementing Reddit's basic
-                    functionality.
+                    This is a Laravel application implementing Reddit's basic functionality.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -377,8 +379,7 @@
                     Custom CMS using ZF1
                 </div>
                 <div class="panel-body">
-                    This is a small custom CMS written in ZF1 for a Real Estate
-                    Consulting Company.
+                    This is a custom CMS written in ZF1 for a Real Estate Consulting Company.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -399,12 +400,12 @@
             <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-zend-plain"></i>
-                    Small catalog of products using ZF1 and ZF2
+                    Catalog of products using ZF1 and ZF2
                 </div>
                 <div class="panel-body">
-                    This is a small catalog of products using ZF1. Where you can
-                    find some of my experiments on integrating more modern
-                    components, like ZF2's service manager, phpspec and Twig.
+                    This is a catalog of products using ZF1. Where you can find some of my
+                    experiments on integrating more modern components, like ZF2's service manager,
+                    phpspec and Twig.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -430,7 +431,7 @@
                     Fitbit API integration with Laravel
                 </div>
                 <div class="panel-body">
-                    Small Laravel application to demo the use of the Fitbit API
+                    Laravel application to demo the use of the Fitbit API
                 </div>
                 <div class="panel-footer">
                     <a
@@ -514,8 +515,8 @@
                 </div>
                 <div class="panel-body">
                     <p>
-                        This package allows you to define simple data fixture
-                        files using YAML and load them using Doctrine DBAL.
+                        This package allows you to define simple data fixture files using YAML and
+                        load them using Doctrine DBAL.
                     </p>
                     <pre><code>composer require comphppuebla/dbal-fixtures</code></pre>
                 </div>
@@ -566,8 +567,8 @@
                 </div>
                 <div class="panel-body">
                     <p>
-                        Light library to decouple form handling from validation,
-                        rendering and translation.
+                        Light library to decouple form responsibilities into 3 categories:
+                        validation, rendering and translation.
                     </p>
                     <pre><code>composer require comphppuebla/easy-forms</code></pre>
                 </div>
@@ -616,9 +617,8 @@
                 </div>
                 <div class="panel-body">
                     <p>
-                        This is a docker container to easily setup an
-                        application on PHP 7. As easy as copying your code to
-                        the <code>sites</code> folder
+                        This is a docker container to easily setup an application on PHP 7. As easy
+                        as copying your code to the <code>sites</code> folder
                     </p>
                 </div>
                 <div class="panel-footer">
@@ -651,8 +651,8 @@
                     Composer workshop
                 </div>
                 <div class="panel-body">
-                    This workshop incrementally builds a simple web framework,
-                    adding a PHP library with Composer on each phase.
+                    This workshop incrementally builds a simple web framework, adding a PHP library
+                    with Composer on each phase.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -676,9 +676,8 @@
                     Symfony 2 workshop
                 </div>
                 <div class="panel-body">
-                    The goal of this workshop is to start using the Symfony2
-                    components in a legacy application in order to start using
-                    the full-stack framework at the end.
+                    The goal of this workshop is to start using the Symfony2 components in a legacy
+                    application in order to start using the full-stack framework at the end.
                 </div>
                 <div class="panel-footer">
                     <a
@@ -725,9 +724,8 @@
                             </a>
                         </div>
                         <div class="media-body">
-                            This is a live coding demo, to start doing TDD using
-                            PHPUnit. It also explains the difference between
-                            code transformations and refactoring.
+                            This is a live coding demo, to start doing TDD using PHPUnit. It also
+                            explains the difference between code transformations and refactoring.
                         </div>
                     </div>
                 </div>
@@ -755,9 +753,8 @@
                             </a>
                         </div>
                         <div class="media-body">
-                            This is an introduction to testing in PHP using
-                            several libraries: Behat, phpspec, PHPUnit, Mockery,
-                            Alice, Codeception, Eris, Humbug.
+                            This is an introduction to testing in PHP using several libraries:
+                            Behat, phpspec, PHPUnit, Mockery, Alice, Codeception, Eris, and Humbug.
                         </div>
                     </div>
                 </div>
@@ -787,9 +784,8 @@
                             </a>
                         </div>
                         <div class="media-body">
-                            This is a Slim 2 workshop divided into two videos.
-                            It's a small application to upload, browse and play
-                            audio files.
+                            This is a Slim 2 workshop divided into two videos. It's a small
+                            application to upload, browse and play audio files.
                         </div>
                         <div class="media-right">
                             <a
