--- a/source/en/cv.html
+++ b/source/en/cv.html
@@ -25,7 +25,7 @@ use:
                     </p>
                     <p>
                         I've been programming professionally since graduating with a
-                        Master's Degree in Computer Science in 2003. I have over 12
+                        Master's Degree in Computer Science in 2005. I have over 12
                         years of experience in tech both in Mexico and the United States.
                     </p>
                     <p>
@@ -150,11 +150,11 @@ use:
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <strong>Master in Computer Science</strong>. Benemérita Universidad Autónoma
-                        de Puebla. 2003-2005.
+                        <strong>Master in Computer Science</strong>. Emeritus Autonomous University
+                        of Puebla. 2003-2005.
                     </li>
                     <li class="list-group-item">
-                        <strong>BS in Computer Science</strong>. Benemérita Universidad Autónoma de
+                        <strong>BS in Computer Science</strong>. Emeritus Autonomous University of
                         Puebla. 1998-2003.
                     </li>
                 </ul>
