Add link to download CV (US)

--- a/en/cv/index.html
+++ b/en/cv/index.html
@@ -50,10 +50,15 @@
                     <li><a href="/en/blog/">Blog</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/cv-latest.pdf" title="Download CV">
+                            <img height="25px" src="/images/download.png" alt="Download CV">
+                        </a>
+                    </li>
                     <li><a href="/">
-                        <span class="language">MX</span>
+                        <span class="language" title="Spanish">MX</span>
                     </a></li>
-                    <li><a href="/en/">
+                    <li><a href="/en/" title="English">
                         <span class="language language-current">US</span>
                     </a></li>
                     <li>
@@ -92,7 +97,7 @@
                     </p>
                     <p>
                         I've been programming professionally since graduating with a
-                        Master's Degree in Computer Science in 2003. I have over 12
+                        Master's Degree in Computer Science in 2005. I have over 12
                         years of experience in tech both in Mexico and the United States.
                     </p>
                     <p>
@@ -217,11 +222,11 @@
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <strong>Master in Computer Science</strong>. Benemérita Universidad Autónoma
-                        de Puebla. 2003-2005.
+                        <strong>Master in Computer Science</strong>. Emeritus Autonomous University
+                        of Puebla. 2003-2005.
                     </li>
                     <li class="list-group-item">
-                        <strong>BS in Computer Science</strong>. Benemérita Universidad Autónoma de
+                        <strong>BS in Computer Science</strong>. Emeritus Autonomous University of
                         Puebla. 1998-2003.
                     </li>
                 </ul>
