fix: Typo in CV
* Fix word coaching

--- a/source/en/cv.html
+++ b/source/en/cv.html
@@ -113,7 +113,7 @@ use:
                         <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java
                         Consultant</strong>. During this period I worked maintaining
                         the data access layer of a POS using <strong>Hibernate</strong>
-                        and <strong>PostgreSQL</strong> and <strong>couching</strong>
+                        and <strong>PostgreSQL</strong> and <strong>coaching</strong>
                         some Jr. consultants.
                     </li>
                     <li class="list-group-item">
