--- a/en/cv/index.html
+++ b/en/cv/index.html
@@ -185,7 +185,7 @@
                         <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java
                         Consultant</strong>. During this period I worked maintaining
                         the data access layer of a POS using <strong>Hibernate</strong>
-                        and <strong>PostgreSQL</strong> and <strong>couching</strong>
+                        and <strong>PostgreSQL</strong> and <strong>coaching</strong>
                         some Jr. consultants.
                     </li>
                     <li class="list-group-item">
