Add filter buttons for portfolio projects

--- a/cv/index.html
+++ b/cv/index.html
@@ -311,14 +311,5 @@
     ga('create', 'UA-56875620-1', 'auto');
     ga('send', 'pageview');
 </script>
-    <script type="text/javascript">
-    var disqus_shortname = 'montealegreluis';
-
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-</script>    </body>
+    </body>
 </html>
