Add more java and ruby applications to Portfolio

--- a/en/portfolio/index.html
+++ b/en/portfolio/index.html
@@ -93,6 +93,7 @@
             <button type="button" data-filter="java" class="btn btn-primary">Java</button>
             <button type="button" data-filter="php" class="btn btn-primary">PHP</button>
             <button type="button" data-filter="javascript" class="btn btn-primary">Javascript</button>
+            <button type="button" data-filter="ruby" class="btn btn-primary">Ruby</button>
             <button type="button" data-filter="docker" class="btn btn-primary">Docker</button>
         </div>
     </div>
@@ -150,8 +151,8 @@
                 Catalog using ZF1 & ZF2
             </div>
             <div class="panel-body">
-                Products catalago written in ZF1. It integrates more modern components, like ZF2
-                service manage, phpspec and Twig.
+                Catalog of products written in ZF1. It integrates more modern components, like ZF2
+                service manager, phpspec and Twig.
             </div>
             <div class="panel-footer">
                 <a
@@ -161,6 +162,50 @@
                         class="bitbucket"
                 >
                     <i class="devicon-bitbucket-plain"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item application ruby">
+        <div class="panel panel-ruby">
+            <div class="panel-heading">
+                <i class="devicon-ruby-plain"></i>
+                Contacts book in Ruby
+            </div>
+            <div class="panel-body">
+                Command line application to manage a person's contacts. It demonstrates how to write
+                integration tests using rspec and SQLite
+            </div>
+            <div class="panel-footer">
+                <a
+                    href="https://github.com/MontealegreLuis/contacts-manager"
+                    target="_blank"
+                    rel="noopener"
+                    class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://travis-ci.org/MontealegreLuis/contacts-manager"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://travis-ci.org/MontealegreLuis/contacts-manager.svg?branch=master"
+                        alt="Build Status"
+                    >
+                </a>
+                <a
+                    href="https://codeclimate.com/github/MontealegreLuis/contacts-manager"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codeclimate.com/github/MontealegreLuis/contacts-manager/badges/gpa.svg"
+                        alt="Code Climate"
+                    >
                 </a>
             </div>
         </div>
@@ -209,6 +254,51 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item application ruby">
+        <div class="panel panel-ruby">
+            <div class="panel-heading">
+                <i class="devicon-ruby-plain"></i>
+                Chatbot in Ruby
+            </div>
+            <div class="panel-body">
+                Command line application with a very minimalistic Chatbot. It demonstrates strings
+                manipulation in Ruby and how to use rspec to unit test.
+            </div>
+            <div class="panel-footer">
+                <a
+                    href="https://github.com/MontealegreLuis/chat-bot"
+                    target="_blank"
+                    rel="noopener"
+                    class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://travis-ci.org/MontealegreLuis/chat-bot"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://travis-ci.org/MontealegreLuis/chat-bot.svg?branch=master"
+                        alt="Build Status"
+                    >
+                </a>
+                <a
+                    href="https://codeclimate.com/github/MontealegreLuis/chat-bot"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codeclimate.com/github/MontealegreLuis/chat-bot/badges/gpa.svg"
+                        alt="Code Climate"
+                    >
+                </a>
+            </div>
+        </div>
+    </div>
+
     <div class="col-sm-6 col-md-4 col-lg-3 grid-item library php">
         <div class="panel panel-php">
             <div class="panel-heading">
@@ -702,6 +792,84 @@
                         class="github"
                 >
                     <i class="fa fa-youtube"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item library java">
+        <div class="panel panel-java">
+            <div class="panel-heading">
+                <i class="devicon-java-plain"></i>
+                Yelp Fusion Java Client
+            </div>
+            <div class="panel-body">
+                Java client for Yelp Fusion API. It currently supports the search, reviews and
+                business endpoints
+            </div>
+            <div class="panel-footer">
+                <a
+                        href="https://github.com/MontealegreLuis/yelpv3-java-client"
+                        target="_blank"
+                        rel="noopener"
+                        class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://travis-ci.org/MontealegreLuis/yelpv3-java-client"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://travis-ci.org/MontealegreLuis/yelpv3-java-client.svg?branch=master"
+                        alt="Build Status"
+                    >
+                </a>
+                <a
+                    href="https://codebeat.co/projects/github-com-montealegreluis-yelpv3-java-client-master"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codebeat.co/badges/6af99e8b-adb4-4f26-9fa8-e586aa7986e6"
+                        alt="Codebeat badge"
+                    >
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4 col-lg-3 grid-item application java">
+        <div class="panel panel-java">
+            <div class="panel-heading">
+                <i class="devicon-java-plain"></i>
+                Yelp API in Spring Boot
+            </div>
+            <div class="panel-body">
+                Web application written in Spring boot. Users can search by location and category
+                using the Yelp Fusion API. It shows how to use the search, reviews and business
+                endpoints.
+            </div>
+            <div class="panel-footer">
+                <a
+                    href="https://github.com/MontealegreLuis/yelp-demo"
+                    target="_blank"
+                    rel="noopener"
+                    class="github"
+                >
+                    <i class="devicon-github-plain"></i>
+                </a>
+                <a
+                    href="https://codebeat.co/projects/github-com-montealegreluis-yelp-demo-master"
+                    target="_blank"
+                    rel="noopener"
+                    class="code-badge"
+                >
+                    <img
+                        src="https://codebeat.co/badges/0704b6a2-cd9a-446b-bc67-4db792c641a0"
+                        alt="Codebeat"
+                    >
                 </a>
             </div>
         </div>
