--- a/en/cv/index.html
+++ b/en/cv/index.html
@@ -48,6 +48,12 @@
                     <li><a href="/en/cv/">Curriculum</a></li>
                     <li><a href="/en/portfolio/">Portfolio</a></li>
                     <li><a href="/en/blog/">Blog</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recommendations <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/talks/">Talks</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
