Add Sandi Metz talk to the list

--- a/talks/index.html
+++ b/talks/index.html
@@ -214,6 +214,29 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=8bZh5LMaSmE">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/8bZh5LMaSmE/3.jpg"
+                            alt="All the Little Things"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        All the Little Things <small>Sandi Metz</small>
+                    </h4>
+                    <p>
+                        Want better apps? Make smaller things... yeah that's it.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
