Add 3 more talks to the page

--- a/talks/index.html
+++ b/talks/index.html
@@ -193,6 +193,29 @@
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=8bZh5LMaSmE">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/8bZh5LMaSmE/3.jpg"
+                            alt="All the Little Things"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        All the Little Things <small>Sandi Metz</small>
+                    </h4>
+                    <p>
+                        Want better apps? Make smaller things... yeah that's it.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://vimeo.com/79106557">
                         <img
                             class="media-object"
@@ -218,20 +241,68 @@
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://www.youtube.com/watch?v=8bZh5LMaSmE">
+                    <a href="https://www.youtube.com/watch?v=FKTxC9pl-WM">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/8bZh5LMaSmE/3.jpg"
-                            alt="All the Little Things"
+                            src="http://i3.ytimg.com/vi/FKTxC9pl-WM/2.jpg"
+                            alt="Making Badass Developers"
                         >
                     </a>
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">
-                        All the Little Things <small>Sandi Metz</small>
+                        Making Badass Developers <small>Kathy Sierra</small>
                     </h4>
                     <p>
-                        Want better apps? Make smaller things... yeah that's it.
+                        Half-a-skill beats a half-assed skill. Practice does not make perfect.
+                        Practice makes <strong>permanent</strong>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=FS1mnISoG7U">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/FS1mnISoG7U/2.jpg"
+                            alt="Scaling Yourself"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Scaling Yourself <small>Scott Hanselman</small>
+                    </h4>
+                    <p>
+                        If it's not improving my life in some way, it's mental clutter and it's out.
+                        Excellent advice on how to end the day without guilt.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=gAQ6t3F_2Ug">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/gAQ6t3F_2Ug/2.jpg"
+                            alt="Model-Minded Development"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Model-Minded Development <small>George Fairbanks</small>
+                    </h4>
+                    <p>
+                        Programming is theory building. Programming is distributed cognition.
                     </p>
                 </div>
             </div>
