Add Jim Weirich, Greg Young and Gary Bernhardt talks

--- a/talks/index.html
+++ b/talks/index.html
@@ -308,6 +308,79 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.destroyallsoftware.com/talks/boundaries">
+                        <img
+                            class="media-object"
+                            src="/images/boundaries.png"
+                            alt="Boundaries"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Boundaries <small>Gary Bernhardt</small>
+                    </h4>
+                    <p>
+                        Best explanation of the actor model I've seen. Functional core, imperative
+                        shell.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=HQXVKHoUQxY">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/HQXVKHoUQxY/1.jpg"
+                            alt="Connascence Examined"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Connascence Examined <small>Jim Weirich</small>
+                    </h4>
+                    <p>
+                        Connascence in software are those things that need to change together.
+                        Connascence is important because <strong>change is expensive</strong>.
+                        Connascence is a very particular and interesting way to understand coupling.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://vimeo.com/108441214">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/492122663_100x75.jpg"
+                            alt="The art of destroying software"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        The art of destroying software <small>Greg Young</small>
+                    </h4>
+                    <p>
+                        Never write big programs. Your code should be easy to delete. Optimize for
+                        your ability to rewrite yor system in one week.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
