--- a/talks/index.html
+++ b/talks/index.html
@@ -458,6 +458,58 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=B93QezwTQpI">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/B93QezwTQpI/1.jpg"
+                            alt="The Transformation Priority Premise"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        The Transformation Priority Premise
+                        <small>Robert Martin</small>
+                    </h4>
+                    <p>
+                        Every new test adds a new constraint. As the tests gets more specific, the
+                        code must get more generic. Every change that makes the code more generic is
+                        a <strong>transformation</strong>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=okUmXP1vAic">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/okUmXP1vAic/3.jpg"
+                            alt="Metaphors We Compute By"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Metaphors We Compute By
+                        <small>Alvaro Videla</small>
+                    </h4>
+                    <p>
+                        To program is to write to another programmer about our solution to a
+                        problem. Metaphors are a tool to do so, for instance, without types we just
+                        have operations on streams of bytes
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
