Add Liz Keogh and Matt Wynne talks

--- a/talks/index.html
+++ b/talks/index.html
@@ -510,6 +510,56 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://vimeo.com/144723689">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/542708422_100x75.jpg"
+                            alt="Real conversations in BDD"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Real conversations in BDD <small>Liz Keogh</small>
+                    </h4>
+                    <p>
+                        Having conversations is more important than capturing conversations.
+                        Having conversations is more important than automating conversations.
+                        BDD is about conversations, examples and scenarios
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=CGN4RFkhH2M">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/CGN4RFkhH2M/1.jpg"
+                            alt="Hexagonal Rails"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Hexagonal Rails
+                        <small>Matt Wynne</small>
+                    </h4>
+                    <p>
+                        Your domain model is in the <strong>communication</strong> patterns between
+                        your objects
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
