Add Modelling by Example talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -635,6 +635,31 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://skillsmatter.com/skillscasts/5899-modelling-by-example">
+                        <img
+                            class="media-object"
+                            src="https://i.vimeocdn.com/video/495636915.jpg?mw=120&mh=90"
+                            alt="Modelling by example"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Modelling by example <small>Konstantin Kudriashov</small>
+                    </h4>
+                    <p>
+                        Use BDD scenarios to drive the design of your core domain model. <strong>
+                        Reduce translation costs</strong> by using the ubiquitous language in both
+                        your scenarios and your model.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
