--- a/talks/index.html
+++ b/talks/index.html
@@ -1,8 +1,88 @@
----
-layout: en/static
-title: Talks
----
-<header class="row">
+<!DOCTYPE html>
+<html>
+<head lang="es-mx">
+    <title>Talks &mdash; Your argument is invalid &mdash; Luis Montealegre</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous"
+>
+<link
+    rel="stylesheet"
+    href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+>
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+<link rel="stylesheet" href="/css/style.css" />
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<link href="/favicon.ico" rel="icon" type="image/x-icon" />
+<link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Your argument is invalid activity feed" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+</head>
+<body>
+    <header class="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/en/" title="Your argument is invalid">
+                    <span class="glyphicon glyphicon-home"></span>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="/en/cv/">Curriculum</a></li>
+                    <li><a href="/en/portfolio/">Portfolio</a></li>
+                    <li><a href="/en/blog/">Blog</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recommendations <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/talks/">Talks</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/cv-latest.pdf" title="Download CV">
+                            <img height="25px" src="/images/download.png" alt="Download CV">
+                        </a>
+                    </li>
+                    <li><a href="/">
+                        <span class="language" title="Spanish">MX</span>
+                    </a></li>
+                    <li><a href="/en/" title="English">
+                        <span class="language language-current">US</span>
+                    </a></li>
+                    <li>
+                        <a href="/atom.xml" class="link-icon">
+                            <img src="/images/rss.png" alt="RSS">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+    </header>
+
+    <div class="content container">
+        <div class="row">
+            <div class="col-sm-12">
+                <header class="row">
     <div class="col-sm-12">
         <h1 class="title">
             <span class="glyphicon glyphicon-facetime-video"></span>
@@ -604,4 +684,32 @@ title: Talks
             </div>
         </div>
     </div>
-</main>
+</main>            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+    2014 - 2017 Luis Montealegre
+    <p  class="pull-right">
+        <a href="http://creativecommons.org/licenses/by-nc/2.5/">
+            <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
+        </a>
+    </p>
+</div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+</script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-56875620-1', 'auto');
+    ga('send', 'pageview');
+</script>
+    </body>
+</html>
