Add Nothing is something talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -660,6 +660,30 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=9mLK_8hKii8">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/9mLK_8hKii8/2.jpg"
+                            alt="Nothing is Something"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Nothing is Something <small>Sandy Metz</small>
+                    </h4>
+                    <p>
+                        Pay attention to your objects messages. Always seek for abstractions,
+                        because <strong>nothing is always something</strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
