Add Fast test, slow test talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -733,6 +733,32 @@
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=RAxiiRPHS9k">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/RAxiiRPHS9k/1.jpg"
+                            alt="Fast test, slow test"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Fast test, slow test <small>Gary Bernhardt</small>
+                    </h4>
+                    <p>
+                        The goals of tests: prevent regression, prevent fear (of breaking something),
+                        prevent bad design.
+                        What makes a <strong>unit test</strong>? 1. They test only one object's
+                        behavior, 2. Other classes can't break it
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>            </div>
         </div>
     </div>
