Add Eric Evans keynote about DDD

--- a/talks/index.html
+++ b/talks/index.html
@@ -786,6 +786,30 @@
         <div class="panel">
             <div class="media">
                 <div class="media-left">
+                    <a href="https://www.youtube.com/watch?v=fnRwfjMqKM8">
+                        <img
+                            class="media-object"
+                            src="http://i3.ytimg.com/vi/fnRwfjMqKM8/2.jpg"
+                            alt="Development, by the numbers"
+                        >
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        Development, by the numbers <small>Anthony Ferrara</small>
+                    </h4>
+                    <p>
+                        How can we objectively quantify whether code is good or if it needs
+                        improving?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="panel">
+            <div class="media">
+                <div class="media-left">
                     <a href="https://www.youtube.com/watch?v=ZsHMHukIlJY">
                         <img
                             class="media-object"
@@ -811,21 +835,22 @@
         <div class="panel">
             <div class="media">
                 <div class="media-left">
-                    <a href="https://www.youtube.com/watch?v=fnRwfjMqKM8">
+                    <a href="https://www.youtube.com/watch?v=kIKwPNKXaLU">
                         <img
                             class="media-object"
-                            src="http://i3.ytimg.com/vi/fnRwfjMqKM8/2.jpg"
-                            alt="Development, by the numbers"
+                            src="http://i3.ytimg.com/vi/kIKwPNKXaLU/1.jpg"
+                            alt="Tackling Complexity in the Heart of Software"
                         >
                     </a>
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">
-                        Development, by the numbers <small>Anthony Ferrara</small>
+                        Tackling Complexity in the Heart of Software <small>Eric Evans</small>
                     </h4>
                     <p>
-                        How can we objectively quantify whether code is good or if it needs
-                        improving?
+                        What does <strong>Domain-Driven Design</strong> look like in 2017? We have
+                        more experience now. We have better tools now. We have an architectural
+                        environment better suited to DDD.
                     </p>
                 </div>
             </div>
